# AI-Geofencing-Retail-Offer-System

./: .gitignore  README.md
backend/api/: api.py  dataset_loader.py  geofence.py  recommendation.py
backend/data/: customers.csv  purchases.csv  stores.csv
backend/retail_agent/: README.md  pyproject.toml
backend/retail_agent/src/retail_agent/: crew.py  main.py
backend/retail_agent/src/retail_agent/config/: agents.yaml  tasks.yaml
retail-dashboard/: package-lock.json  package.json
retail-dashboard/src/: App.js  index.css
retail-dashboard/src/components/: AuthModal.js  CustomerLogs.js  CustomerSimulator.js  LandingPage.js  OfferPanel.js  ProductCatalog.js  StoreMap.js
