[project]
name = "retail_agent"
version = "0.1.0"
description = "retail_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
retail_agent = "retail_agent.main:run"
run_crew = "retail_agent.main:run"
train = "retail_agent.main:train"
replay = "retail_agent.main:replay"
test = "retail_agent.main:test"
run_with_trigger = "retail_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
